# gpu-mode

./: .gitignore  README.md  pyproject.toml
.github/workflows/: fmt.yml  pytest.yml
conv2d_v2/pmpp_v2/conv2d_py/: AGENTS.md  kernel.cu  submission.py
matmul_v2/pmpp_v2/matmul_py/: AGENTS.md  kernel.cu  submission.py
problems/matmul_v2/: kernel.cu  naive.cu  profile_mm.py  profile_naive.py  spec.py  test_mm.py
src/: build.py  check.py  cli.py  run.py  template.py
src/gpu_mode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
