[project]
name = "gpu-mode"
version = "0.1.0"
requires-python = ">=3.10,<3.12"

dependencies = [
    "torch>=2.5,<2.8",
    "numpy<2",
    "ninja",
    "pytest",
    "click",
]

[project.scripts]
gpu-mode = "src.cli:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
