[project]
name = "gpu-mode"
version = "0.1.0"
requires-python = ">=3.10,<3.12"

dependencies = [
    "ruff>=0.15.20",
    "ninja>=1.13.0",
    "pytest>=9.1.1",
    "click>=8.4.2",
    "numpy>=2.2.6",
    "torch>=2.12.1",
]

[project.scripts]
gpu-mode = "src.cli:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
